--- a/binreader.ipynb
+++ b/binreader.ipynb
@@ -2,539 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIELD: FPR</th>\n",
+       "      <th>FIELD: FGIP</th>\n",
+       "      <th>FIELD: FGPR</th>\n",
+       "      <th>FIELD: FGPT</th>\n",
+       "      <th>FIELD: FWPR</th>\n",
+       "      <th>FIELD: FMWPR</th>\n",
+       "      <th>FIELD: FMWPT</th>\n",
+       "      <th>FIELD: FMWWT</th>\n",
+       "      <th>FIELD: FGPP</th>\n",
+       "      <th>FIELD: FGIMR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>U3_D5: GGIMT</th>\n",
+       "      <th>K-1: GGIMT</th>\n",
+       "      <th>K-321: GGIMT</th>\n",
+       "      <th>K-2: GGIMT</th>\n",
+       "      <th>UKPG-2V: GGIMT</th>\n",
+       "      <th>K-32: GGIMT</th>\n",
+       "      <th>K-3: GGIMT</th>\n",
+       "      <th>SBOR: GGIMT</th>\n",
+       "      <th>UKPG-1V: GGIMT</th>\n",
+       "      <th>CDKS_ZPA: GGIMT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>45.508736</td>\n",
+       "      <td>7.156036e+11</td>\n",
+       "      <td>260874800.0</td>\n",
+       "      <td>1.787138e+12</td>\n",
+       "      <td>727.473206</td>\n",
+       "      <td>487.0</td>\n",
+       "      <td>524.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>260874800.0</td>\n",
+       "      <td>60086328.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.709048e+10</td>\n",
+       "      <td>3.709048e+10</td>\n",
+       "      <td>3.709048e+10</td>\n",
+       "      <td>3.709048e+10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.093324e+11</td>\n",
+       "      <td>7.224195e+10</td>\n",
+       "      <td>1.093324e+11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 2891 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['2144',\n",
-       " '2204',\n",
-       " '1144',\n",
-       " '1033',\n",
-       " '3071',\n",
-       " '1323',\n",
-       " '2343',\n",
-       " '1N',\n",
-       " '2233',\n",
-       " '2045',\n",
-       " '3066',\n",
-       " '3125',\n",
-       " '1200',\n",
-       " '2092',\n",
-       " '1191',\n",
-       " '3155',\n",
-       " '1234',\n",
-       " '3082',\n",
-       " '2037',\n",
-       " '1122',\n",
-       " '3232',\n",
-       " '2103',\n",
-       " '3192',\n",
-       " '3010',\n",
-       " '2094',\n",
-       " '17N',\n",
-       " '3117',\n",
-       " '1026',\n",
-       " '3043',\n",
-       " '2096',\n",
-       " '1154',\n",
-       " '2044',\n",
-       " '2196',\n",
-       " '1024',\n",
-       " '3086',\n",
-       " '2104',\n",
-       " '3233',\n",
-       " '3163',\n",
-       " '1022',\n",
-       " '1194',\n",
-       " '1076',\n",
-       " '1111',\n",
-       " '3036',\n",
-       " '3165',\n",
-       " '3162',\n",
-       " '3121',\n",
-       " '2223',\n",
-       " '2166',\n",
-       " '1034',\n",
-       " '1084',\n",
-       " '2142',\n",
-       " '3204',\n",
-       " '2154',\n",
-       " '2112',\n",
-       " '1142',\n",
-       " '3037',\n",
-       " '1202',\n",
-       " '2123',\n",
-       " '2232',\n",
-       " '3212',\n",
-       " '3243',\n",
-       " '2013',\n",
-       " '3124',\n",
-       " '2157',\n",
-       " '3092',\n",
-       " '2061',\n",
-       " '3127',\n",
-       " '1233',\n",
-       " '3215',\n",
-       " '12N',\n",
-       " '3035',\n",
-       " '2033',\n",
-       " '2087',\n",
-       " '2046',\n",
-       " '3141',\n",
-       " '1063',\n",
-       " '3166',\n",
-       " '2155',\n",
-       " '3052',\n",
-       " '9N',\n",
-       " '3201',\n",
-       " '1333',\n",
-       " '3111',\n",
-       " '3234',\n",
-       " '1131',\n",
-       " '2164',\n",
-       " '1082',\n",
-       " '3200',\n",
-       " '3134',\n",
-       " '2176',\n",
-       " '2072',\n",
-       " '1156',\n",
-       " '1363',\n",
-       " '2194',\n",
-       " '3087',\n",
-       " '2097',\n",
-       " '1176',\n",
-       " '3135',\n",
-       " '3333',\n",
-       " '1056',\n",
-       " '2153',\n",
-       " '3311',\n",
-       " '1180',\n",
-       " '2341',\n",
-       " '2135',\n",
-       " '2041',\n",
-       " '3211',\n",
-       " '3151',\n",
-       " '1042',\n",
-       " '3143',\n",
-       " '3194',\n",
-       " '3115',\n",
-       " '1062',\n",
-       " '2231',\n",
-       " '4N',\n",
-       " '3131',\n",
-       " '1094',\n",
-       " '1222',\n",
-       " '2027',\n",
-       " '2172',\n",
-       " '2075',\n",
-       " '2211',\n",
-       " '3313',\n",
-       " '1044',\n",
-       " '3164',\n",
-       " '2187',\n",
-       " '1125',\n",
-       " '1045',\n",
-       " '2011',\n",
-       " '2191',\n",
-       " '1081',\n",
-       " '3034',\n",
-       " '3084',\n",
-       " '3063',\n",
-       " '3342',\n",
-       " '3077',\n",
-       " '2095',\n",
-       " '3262',\n",
-       " '3142',\n",
-       " '1322',\n",
-       " '2133',\n",
-       " '3012',\n",
-       " '2062',\n",
-       " '1161',\n",
-       " '1134',\n",
-       " '1164',\n",
-       " '2174',\n",
-       " '1064',\n",
-       " '1175',\n",
-       " '1172',\n",
-       " '2156',\n",
-       " '2085',\n",
-       " '2152',\n",
-       " '2183',\n",
-       " '3323',\n",
-       " '1085',\n",
-       " '1204',\n",
-       " '1072',\n",
-       " '3081',\n",
-       " '2161',\n",
-       " '2203',\n",
-       " '2017',\n",
-       " '3064',\n",
-       " '1055',\n",
-       " '2035',\n",
-       " '2171',\n",
-       " '1113',\n",
-       " '2106',\n",
-       " '3114',\n",
-       " '1224',\n",
-       " '1106',\n",
-       " '2331',\n",
-       " '2212',\n",
-       " '2082',\n",
-       " '1181',\n",
-       " '3011',\n",
-       " '2175',\n",
-       " '3161',\n",
-       " '2162',\n",
-       " '1036',\n",
-       " '2167',\n",
-       " '1104',\n",
-       " '3057',\n",
-       " '3145',\n",
-       " '2N',\n",
-       " '1141',\n",
-       " '3195',\n",
-       " '3032',\n",
-       " '2107',\n",
-       " '1126',\n",
-       " '1136',\n",
-       " '1153',\n",
-       " '16P',\n",
-       " '2056',\n",
-       " '2026',\n",
-       " '2111',\n",
-       " '2195',\n",
-       " '2063',\n",
-       " '3072',\n",
-       " '1133',\n",
-       " '3126',\n",
-       " '2131',\n",
-       " '1321',\n",
-       " '3137',\n",
-       " '2042',\n",
-       " '1201',\n",
-       " '2160',\n",
-       " '3056',\n",
-       " '2083',\n",
-       " '1054',\n",
-       " '1046',\n",
-       " '1115',\n",
-       " '1211',\n",
-       " '3045',\n",
-       " '3014',\n",
-       " '1114',\n",
-       " '2193',\n",
-       " '3024',\n",
-       " '3047',\n",
-       " '3253',\n",
-       " '1017',\n",
-       " '3042',\n",
-       " '2053',\n",
-       " '3186',\n",
-       " '3331',\n",
-       " '2034',\n",
-       " '1165',\n",
-       " '3122',\n",
-       " '2051',\n",
-       " '2116',\n",
-       " '3113',\n",
-       " '3182',\n",
-       " '1143',\n",
-       " '3191',\n",
-       " '3044',\n",
-       " '2024',\n",
-       " '3171',\n",
-       " '1025',\n",
-       " '3065',\n",
-       " '1203',\n",
-       " '2163',\n",
-       " '2322',\n",
-       " '2022',\n",
-       " '3041',\n",
-       " '19N',\n",
-       " '1351',\n",
-       " '3254',\n",
-       " '3144',\n",
-       " '1074',\n",
-       " '3341',\n",
-       " '1013',\n",
-       " '3264',\n",
-       " '2127',\n",
-       " '1091',\n",
-       " '1112',\n",
-       " '1130',\n",
-       " '2014',\n",
-       " '3152',\n",
-       " '3136',\n",
-       " '3051',\n",
-       " '2177',\n",
-       " '3022',\n",
-       " '3173',\n",
-       " '3146',\n",
-       " '2064',\n",
-       " '1011',\n",
-       " '2181',\n",
-       " '1151',\n",
-       " '2025',\n",
-       " '2067',\n",
-       " '3016',\n",
-       " '3322',\n",
-       " '10P',\n",
-       " '3101',\n",
-       " '2030',\n",
-       " '1071',\n",
-       " '3103',\n",
-       " '3252',\n",
-       " '5N',\n",
-       " '1041',\n",
-       " '15N',\n",
-       " '3174',\n",
-       " '1162',\n",
-       " '2151',\n",
-       " '1096',\n",
-       " '3251',\n",
-       " '2115',\n",
-       " '2091',\n",
-       " '3235',\n",
-       " '3184',\n",
-       " '2312',\n",
-       " '2023',\n",
-       " '1053',\n",
-       " '3105',\n",
-       " '2192',\n",
-       " '3060',\n",
-       " '2143',\n",
-       " '7P',\n",
-       " '3123',\n",
-       " '3102',\n",
-       " '1183',\n",
-       " '1083',\n",
-       " '2147',\n",
-       " '2165',\n",
-       " '2137',\n",
-       " '3312',\n",
-       " '2311',\n",
-       " '1135',\n",
-       " '1155',\n",
-       " '2145',\n",
-       " '2186',\n",
-       " '1040',\n",
-       " '3213',\n",
-       " '3104',\n",
-       " '2086',\n",
-       " '2113',\n",
-       " '3074',\n",
-       " '3093',\n",
-       " '3070',\n",
-       " '2060',\n",
-       " '1092',\n",
-       " '1052',\n",
-       " '1032',\n",
-       " '1037',\n",
-       " '3062',\n",
-       " '1166',\n",
-       " '3156',\n",
-       " '2242',\n",
-       " '3183',\n",
-       " '2036',\n",
-       " '3067',\n",
-       " '2074',\n",
-       " '1361',\n",
-       " '3083',\n",
-       " '2173',\n",
-       " '3196',\n",
-       " '6P',\n",
-       " '1061',\n",
-       " '2332',\n",
-       " '1223',\n",
-       " '2032',\n",
-       " '2185',\n",
-       " '3175',\n",
-       " '3023',\n",
-       " '3185',\n",
-       " '1132',\n",
-       " '2141',\n",
-       " '3031',\n",
-       " '2070',\n",
-       " '1362',\n",
-       " '2071',\n",
-       " '3242',\n",
-       " '1173',\n",
-       " '2245',\n",
-       " '2015',\n",
-       " '2117',\n",
-       " '1014',\n",
-       " '3181',\n",
-       " '1214',\n",
-       " '3222',\n",
-       " '2215',\n",
-       " '3245',\n",
-       " '3231',\n",
-       " '2102',\n",
-       " '1160',\n",
-       " '2246',\n",
-       " '2205',\n",
-       " '2076',\n",
-       " '2080',\n",
-       " '2126',\n",
-       " '2084',\n",
-       " '2132',\n",
-       " '2201',\n",
-       " '3076',\n",
-       " '2016',\n",
-       " '1313',\n",
-       " '1101',\n",
-       " '2184',\n",
-       " '3116',\n",
-       " '3241',\n",
-       " '3244',\n",
-       " '3061',\n",
-       " '1163',\n",
-       " '14N',\n",
-       " '3172',\n",
-       " '2052',\n",
-       " '3106',\n",
-       " '2197',\n",
-       " '3107',\n",
-       " '3261',\n",
-       " '3132',\n",
-       " '3176',\n",
-       " '1352',\n",
-       " '1171',\n",
-       " '3203',\n",
-       " '3321',\n",
-       " '1012',\n",
-       " '2081',\n",
-       " '3026',\n",
-       " '2222',\n",
-       " '2114',\n",
-       " '1145',\n",
-       " '2021',\n",
-       " '1066',\n",
-       " '2235',\n",
-       " '1023',\n",
-       " '2313',\n",
-       " '3332',\n",
-       " '1231',\n",
-       " '1031',\n",
-       " '1331',\n",
-       " '2241',\n",
-       " '1021',\n",
-       " '1182',\n",
-       " '2043',\n",
-       " '3095',\n",
-       " '1103',\n",
-       " '2124',\n",
-       " '1035',\n",
-       " '2077',\n",
-       " '2012',\n",
-       " '2234',\n",
-       " '11N',\n",
-       " '3091',\n",
-       " '3263',\n",
-       " '3025',\n",
-       " '3094',\n",
-       " '1123',\n",
-       " '2057',\n",
-       " '2221',\n",
-       " '2105',\n",
-       " '1016',\n",
-       " '3153',\n",
-       " '1015',\n",
-       " '3055',\n",
-       " '1043',\n",
-       " '2047',\n",
-       " '1312',\n",
-       " '2321',\n",
-       " '3205',\n",
-       " '3193',\n",
-       " '2146',\n",
-       " '2213',\n",
-       " '2073',\n",
-       " '3053',\n",
-       " '2202',\n",
-       " '3096',\n",
-       " '8N',\n",
-       " '1093',\n",
-       " '1121',\n",
-       " '1146',\n",
-       " '3221',\n",
-       " '1152',\n",
-       " '2150',\n",
-       " '3206',\n",
-       " '1102',\n",
-       " '1086',\n",
-       " '1232',\n",
-       " '3033',\n",
-       " '3225',\n",
-       " '3P',\n",
-       " '2182',\n",
-       " '31NG',\n",
-       " '2066',\n",
-       " '3343',\n",
-       " '1341',\n",
-       " '1212',\n",
-       " '1311',\n",
-       " '1105',\n",
-       " '2342',\n",
-       " '3147',\n",
-       " '3013',\n",
-       " '2134',\n",
-       " '1184',\n",
-       " '2093',\n",
-       " '2224',\n",
-       " '2054',\n",
-       " '2031',\n",
-       " '1075',\n",
-       " '3073',\n",
-       " '3214',\n",
-       " '1116',\n",
-       " '1193',\n",
-       " '3154',\n",
-       " '3224',\n",
-       " '1095',\n",
-       " '3112',\n",
-       " '2333',\n",
-       " '2243',\n",
-       " '1343',\n",
-       " '2121',\n",
-       " '1342',\n",
-       " '1213',\n",
-       " '3054',\n",
-       " '18N',\n",
-       " '3046',\n",
-       " '1353',\n",
-       " '3133',\n",
-       " '1124',\n",
-       " '3015',\n",
-       " '2244',\n",
-       " '3085',\n",
-       " '2122',\n",
-       " '3223',\n",
-       " '2125',\n",
-       " '2101',\n",
-       " '3170',\n",
-       " '2055',\n",
-       " '3021',\n",
-       " '1073',\n",
-       " '1332',\n",
-       " '2065',\n",
-       " '2323',\n",
-       " '1174',\n",
-       " '1192',\n",
-       " '1065',\n",
-       " '2225',\n",
-       " '2214',\n",
-       " '3202',\n",
-       " '3075',\n",
-       " '2136',\n",
-       " '1051',\n",
-       " '13N',\n",
-       " '1221']"
+       "            FIELD: FPR   FIELD: FGIP  FIELD: FGPR   FIELD: FGPT  FIELD: FWPR  \\\n",
+       "2022-01-01   45.508736  7.156036e+11  260874800.0  1.787138e+12   727.473206   \n",
+       "\n",
+       "            FIELD: FMWPR  FIELD: FMWPT  FIELD: FMWWT  FIELD: FGPP  \\\n",
+       "2022-01-01         487.0         524.0           5.0  260874800.0   \n",
+       "\n",
+       "            FIELD: FGIMR  ...  U3_D5: GGIMT  K-1: GGIMT  K-321: GGIMT  \\\n",
+       "2022-01-01    60086328.0  ...           0.0         0.0  3.709048e+10   \n",
+       "\n",
+       "              K-2: GGIMT  UKPG-2V: GGIMT   K-32: GGIMT  K-3: GGIMT  \\\n",
+       "2022-01-01  3.709048e+10    3.709048e+10  3.709048e+10         0.0   \n",
+       "\n",
+       "             SBOR: GGIMT  UKPG-1V: GGIMT  CDKS_ZPA: GGIMT  \n",
+       "2022-01-01  1.093324e+11    7.224195e+10     1.093324e+11  \n",
+       "\n",
+       "[1 rows x 2891 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,8 +106,15 @@
    "source": [
     "from binRead import MySmspec\n",
     "sm = MySmspec(r'model_1/PREDICT_445_11_2VAR_VELO_PICK.SMSPEC')\n",
-    "sm.get_all_wells"
+    "sm.get_main(sm.get_all_keywords, sm.get_all_groups, use_unit=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -567,7 +138,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "9424d8ede043529b70294f04a23dcad50dcb6cc4e19d8621b7029ddfd15e0126"
    }
   }
  },
