исправлено навзвание параметра

--- a/binreader.ipynb
+++ b/binreader.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "from binRead import MySmspec\n",
     "sm = MySmspec(r'model_1/PREDICT_445_11_2VAR_VELO_PICK.SMSPEC')\n",
-    "sm.get_main(sm.get_all_keywords, sm.get_all_groups, use_unit=False)"
+    "sm.get_main(sm.get_all_keywords, sm.get_all_groups, use_units=False)"
    ]
   },
   {
